--- a/web/name/index.html
+++ b/web/name/index.html
@@ -126,8 +126,10 @@ function getQueryString(name) {
   
 
         if(data.code==0){
-          if(channel_id==5){
-            window.location.href=`/html/index.html?out_trade_no=${out_trade_no}`
+          if(channel_id==4){
+            window.location.href=`/money/index.html?out_trade_no=${out_trade_no}`
+          }else  if(channel_id==5){
+            window.location.href=`/alipay/index.html?out_trade_no=${out_trade_no}`
           }else{
             window.location.href=`/html/index.html?out_trade_no=${out_trade_no}`
           }
